# xiaozhe-healthcare-server

./: .dockerignore  .gitignore  README.md
admin-server/: .env.example  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
admin-server/app/: __init__.py  commands.py  config.py  extensions.py
admin-server/app/api/: __init__.py
admin-server/app/controllers/: agreements.py  auth.py  banners.py  customer_service_chat.py  dashboard.py  departments.py  doctors.py  health.py  news.py  orders.py  products.py  staff.py  users.py
admin-server/app/models/: __init__.py  admin_user.py  agreement.py  banner.py  chat.py  department.py  doctor.py  news.py  order.py  product.py  staff.py
admin-server/app/routes/: __init__.py  agreements.py  auth.py  banners.py  customer_service_chat.py  dashboard.py  departments.py  doctors.py  news.py  orders.py  products.py  staff.py  users.py
admin-server/app/services/: agreements.py  auth.py  banners.py  customer_service_chat.py  dashboard.py  departments.py  doctors.py  health.py  news.py  orders.py  products.py  staff.py  storage.py  users.py
admin-server/app/utils/: jwt.py  response.py  security.py
admin-server/migrations/: README  alembic.ini
admin-server/migrations/versions/: 202604190001_create_admin_users.py  202604190002_create_admin_products.py  202604190003_add_product_image_url.py  202604200001_add_product_summary.py  202604200002_create_admin_news.py  202604200003_create_admin_banners.py  202604200004_create_departments_doctors.py  202604200006_add_product_type.py  (+6 more)
admin-server/tests/: test_health.py
(+143 files in other folders)
