[project]
name = "xiaozhe-admin-server"
version = "0.1.0"
description = "XiaoZhe Medical admin server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-Cors>=5.0,<6.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "Flask-Migrate>=4.0,<5.0",
    "gunicorn>=22.0,<26.0",
    "gevent>=24.0,<26.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "PyJWT>=2.8,<3.0",
    "oss2>=2.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-flask>=1.3,<2.0",
]
